--- a/CalculadoraMasaCorporal/CalculadoraMasaCorporal/Base.lproj/Main.storyboard
+++ b/CalculadoraMasaCorporal/CalculadoraMasaCorporal/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="UIControl">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -76,6 +76,9 @@
                             <constraint firstItem="jff-n2-Sxb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="u7t-Bu-FDZ"/>
                             <constraint firstItem="VE4-NW-5sK" firstAttribute="leading" secondItem="JMf-IO-hxH" secondAttribute="leading" id="wbh-C4-NLx"/>
                         </constraints>
+                        <connections>
+                            <action selector="backgroundTap:" destination="BYZ-38-t0r" eventType="touchDown" id="ILL-Dn-ZeX"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="estatura" destination="JMf-IO-hxH" id="L2B-pC-W1r"/>
