--- a/CalculadoraMasaCorporal/CalculadoraMasaCorporal/Base.lproj/Main.storyboard
+++ b/CalculadoraMasaCorporal/CalculadoraMasaCorporal/Base.lproj/Main.storyboard
@@ -22,21 +22,22 @@
                                 <state key="normal" title="Calcular IMC"/>
                                 <connections>
                                     <action selector="calcularIMC:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pd8-bp-Hqz"/>
+                                    <segue destination="7Qx-v9-PdJ" kind="show" id="ZvJ-3i-3mC"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Calculadora de IMC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jI9-jh-6r7">
                                 <rect key="frame" x="225" y="66" width="150" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AwM-Cq-Wgk">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AwM-Cq-Wgk">
                                 <rect key="frame" x="205" y="178" width="189" height="197"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JMf-IO-hxH">
                                         <rect key="frame" x="20" y="147" width="149" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                        <textInputTraits key="textInputTraits"/>
                                         <connections>
                                             <action selector="textFieldDoneWriting:" destination="BYZ-38-t0r" eventType="editingDidEndOnExit" id="Z0J-mv-ghM"/>
                                         </connections>
@@ -44,19 +45,19 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Peso" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jff-n2-Sxb">
                                         <rect key="frame" x="76" y="20" width="38" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Estatura" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fwx-eF-CG0">
                                         <rect key="frame" x="63" y="118" width="64" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VE4-NW-5sK">
                                         <rect key="frame" x="20" y="49" width="149" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                        <textInputTraits key="textInputTraits"/>
                                         <connections>
                                             <action selector="textFieldDoneWriting:" destination="BYZ-38-t0r" eventType="editingDidEndOnExit" id="CW7-sd-kcf"/>
                                         </connections>
@@ -102,6 +103,47 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="380" y="301"/>
+        </scene>
+        <!--Vista Resultados-->
+        <scene sceneID="TPj-LW-Wu5">
+            <objects>
+                <viewController id="7Qx-v9-PdJ" customClass="VistaResultados" customModule="CalculadoraMasaCorporal" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2aZ-ra-LW0"/>
+                        <viewControllerLayoutGuide type="bottom" id="jYD-YC-K4c"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Wn4-jR-Oah">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Resultado" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HId-Y8-UeG">
+                                <rect key="frame" x="267" y="52" width="77" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AjJ-53-jFw">
+                                <rect key="frame" x="279" y="124" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="HId-Y8-UeG" firstAttribute="centerX" secondItem="Wn4-jR-Oah" secondAttribute="centerX" constant="5.5" id="4us-Yz-GuO"/>
+                            <constraint firstItem="AjJ-53-jFw" firstAttribute="centerX" secondItem="Wn4-jR-Oah" secondAttribute="centerX" id="G15-5D-AOO"/>
+                            <constraint firstItem="AjJ-53-jFw" firstAttribute="top" secondItem="HId-Y8-UeG" secondAttribute="bottom" constant="51" id="fpY-7v-tLy"/>
+                            <constraint firstItem="HId-Y8-UeG" firstAttribute="top" secondItem="2aZ-ra-LW0" secondAttribute="bottom" constant="32" id="ogn-RI-bFE"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="resultadoIMC" destination="AjJ-53-jFw" id="BBW-14-OXh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="T4J-CX-CyO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1058" y="301"/>
         </scene>
     </scenes>
 </document>
